--- a/JobNotesAPI/appsettings.json
+++ b/JobNotesAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "server=PC;database=TodoDb;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DbConnection": "server=DESKTOP-QU6GPQN;database=JobSearchDatabase;Trusted_Connection=true;TrustServerCertificate=true;"
   }
 }
